@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android' version '2.1.21' apply false
+    id 'org.jetbrains.kotlin.android' version '2.2.0' apply false
 }
 
 android {
@@ -83,6 +83,8 @@ android {
                 showStackTraces = true
                 showStandardStreams = true
             }
+            // Configure JVM arguments to prevent Mockito self-attachment warnings
+            jvmArgs '-XX:+EnableDynamicAgentLoading'
         }
         unitTests.includeAndroidResources = true
     }
@@ -91,6 +93,10 @@ android {
         includeInApk = false
         // Disables dependency metadata when building Android App Bundles.
         includeInBundle = false
+    }
+    packagingOptions {
+        merge 'META-INF/LICENSE.md'
+        merge 'META-INF/LICENSE-notice.md'
     }
 }
 
@@ -101,14 +107,14 @@ configurations {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.recyclerview:recyclerview:1.4.0'
-    implementation 'com.opencsv:opencsv:5.11'
-    implementation(platform("org.jetbrains.kotlin:kotlin-bom:2.1.21"))
+    implementation 'com.opencsv:opencsv:5.11.2'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:2.2.0"))
     //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
     testImplementation(project(":shared-test"))
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.robolectric:robolectric:4.14.1'
+    testImplementation 'org.robolectric:robolectric:4.15.1'
     testImplementation 'androidx.test:core:1.6.1'
     testImplementation 'org.mockito:mockito-core:5.18.0'
     androidTestImplementation(project(":shared-test"))
